# docs/swagger.yaml
@@ -1,15 +1,7 @@
 definitions:
   errcode.Error:
     type: object
-  gorm.DeletedAt:
-    properties:
-      time:
-        type: string
-      valid:
-        description: Valid is true if Time is not NULL
-        type: boolean
-    type: object
-  models.Article:
+  rules.ArticleGetResponse:
     properties:
       content:
         type: string
@@ -19,13 +11,9 @@ definitions:
         type: string
       createdAt:
         type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
       desc:
         type: string
       id:
-        type: integer
-      state:
         type: integer
       title:
         type: string
@@ -34,14 +22,12 @@ definitions:
       updatedAt:
         type: string
     type: object
-  models.Tag:
+  rules.TagGetResponse:
     properties:
       created_by:
         type: string
       createdAt:
         type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
       id:
         type: integer
       name:
@@ -60,13 +46,9 @@ info:
 paths:
   /api/v1/article:
     post:
+      consumes:
+      - application/json
       parameters:
-      - description: 标签ID
-        in: body
-        name: tag_id
-        required: true
-        schema:
-          type: string
       - description: 文章标题
         in: body
         name: title
@@ -76,12 +58,12 @@ paths:
       - description: 文章简述
         in: body
         name: desc
+        required: true
         schema:
           type: string
       - description: 封面图片地址
         in: body
         name: cover_image_url
-        required: true
         schema:
           type: string
       - description: 文章内容
@@ -96,18 +78,19 @@ paths:
         required: true
         schema:
           type: integer
-      - description: 状态
+      - description: 创建者
         in: body
-        name: state
+        name: updated_by
+        required: true
         schema:
           type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: 成功
+          description: 文章创建成功
           schema:
-            $ref: '#/definitions/models.Article'
+            type: string
         "400":
           description: 请求错误
           schema:
@@ -116,6 +99,7 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
+      summary: 创建文章
   /api/v1/article/{id}:
     delete:
       parameters:
@@ -128,7 +112,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: 成功
+          description: 文章删除成功
           schema:
             type: string
         "400":
@@ -139,6 +123,7 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
+      summary: 删除文章
     get:
       parameters:
       - description: 文章 ID
@@ -150,9 +135,11 @@ paths:
       - application/json
       responses:
         "200":
-          description: 成功
+          description: 获取文章成功
           schema:
-            $ref: '#/definitions/models.Article'
+            items:
+              $ref: '#/definitions/rules.ArticleGetResponse'
+            type: array
         "400":
           description: 请求错误
           schema:
@@ -161,13 +148,16 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
+      summary: 获取单个文章
     put:
+      consumes:
+      - application/json
       parameters:
-      - description: 标签ID
-        in: body
-        name: tag_id
-        schema:
-          type: string
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
       - description: 文章标题
         in: body
         name: title
@@ -198,7 +188,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: 成功
+          description: 文章更新成功
           schema:
             type: string
         "400":
@@ -209,8 +199,11 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
+      summary: 更新文章
   /api/v1/tag:
     post:
+      consumes:
+      - application/json
       parameters:
       - description: 标签名称
         in: body
@@ -220,14 +213,6 @@ paths:
         required: true
         schema:
           type: string
-      - description: 状态
-        enum:
-        - 0
-        - 1
-        in: body
-        name: state
-        schema:
-          type: integer
       - description: 创建者
         in: body
         maxLength: 100
@@ -236,13 +221,21 @@ paths:
         required: true
         schema:
           type: string
+      - description: 更新者
+        in: body
+        maxLength: 100
+        minLength: 3
+        name: updated_by
+        required: true
+        schema:
+          type: string
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 标签创建成功
           schema:
-            $ref: '#/definitions/models.Tag'
+            type: string
         "400":
           description: 请求错误
           schema:
@@ -251,6 +244,7 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
+      summary: 新增标签
   /api/v1/tag/{id}:
     delete:
       parameters:
@@ -274,6 +268,7 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
+      summary: 删除标签
     get:
       parameters:
       - description: 标签 ID
@@ -285,9 +280,11 @@ paths:
       - application/json
       responses:
         "200":
-          description: 成功
+          description: 获取标签成功
           schema:
-            $ref: '#/definitions/models.Tag'
+            items:
+              $ref: '#/definitions/rules.TagGetResponse'
+            type: array
         "400":
           description: 请求错误
           schema:
@@ -296,7 +293,10 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
+      summary: 获取单个标签
     put:
+      consumes:
+      - application/json
       parameters:
       - description: 标签 ID
         in: path
@@ -341,4 +341,5 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
+      summary: 更新标签
 swagger: "2.0"
